make dreamland router npm publish ready

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="node_modules/@mercuryworkshop/alicejs/index.js"></script>
+  <script src="node_modules/dreamland/dist/all.js"></script>
   <script defer src="dist/router.cjs"></script>
 </head>
 
